# KittyCooker

./: .gitignore  .replit  deploy.py  env.py  main.py  pyproject.toml  replit.md  requirements.txt
commands/: __init__.py  create.py  list.py  start.py
models/: __init__.py  ingredient.py  recipe.py  states.py
utils/: constants.py  formats.py  formatting.py  shared.py
